[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtiste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
