[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtiste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "anthropic>=0.73.0",
    "fastapi>=0.121.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "kaggle>=1.7.4.5",
    "pgvector>=0.4.1",
    "mistralai>=1.9.11",
    "elevenlabs>=2.23.0",
    "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
where = ["src"]
